--- a/designer/mainwindow.ui
+++ b/designer/mainwindow.ui
@@ -66,14 +66,28 @@
           <property name="title">
            <string>Dataset handling</string>
           </property>
-          <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,1,0">
+          <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,1,0,0">
            <property name="topMargin">
             <number>9</number>
            </property>
            <property name="rightMargin">
             <number>9</number>
            </property>
-           <item row="3" column="0">
+           <item row="1" column="0">
+            <widget class="QPushButton" name="import_file_btn">
+             <property name="text">
+              <string>Import files</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QPushButton" name="plt_autoscale">
+             <property name="text">
+              <string>Autoscale plot</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
             <widget class="QScrollArea" name="scrollArea">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Ignored" vsizetype="Expanding">
@@ -113,8 +127,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>217</width>
-                <height>544</height>
+                <width>223</width>
+                <height>469</height>
                </rect>
               </property>
               <property name="sizePolicy">
@@ -506,13 +520,6 @@
              </widget>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QPushButton" name="import_file_btn">
-             <property name="text">
-              <string>Import files</string>
-             </property>
-            </widget>
-           </item>
            <item row="0" column="0">
             <widget class="QListWidget" name="dataset_list">
              <property name="minimumSize">
@@ -554,10 +561,19 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
-            <widget class="QPushButton" name="plt_autoscale">
+           <item row="3" column="0">
+            <widget class="QPushButton" name="resp_btn">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>60</width>
+               <height>0</height>
+              </size>
+             </property>
              <property name="text">
-              <string>Autoscale plot</string>
+              <string>Add time response to TF</string>
              </property>
             </widget>
            </item>
@@ -683,8 +699,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>205</width>
-                <height>582</height>
+                <width>213</width>
+                <height>510</height>
                </rect>
               </property>
               <property name="sizePolicy">
@@ -1378,22 +1394,6 @@
              </widget>
             </widget>
            </item>
-           <item row="2" column="0">
-            <widget class="QPushButton" name="resp_btn">
-             <property name="enabled">
-              <bool>false</bool>
-             </property>
-             <property name="minimumSize">
-              <size>
-               <width>60</width>
-               <height>0</height>
-              </size>
-             </property>
-             <property name="text">
-              <string>Respuesta</string>
-             </property>
-            </widget>
-           </item>
           </layout>
          </widget>
         </item>
@@ -1409,7 +1409,7 @@
      <x>0</x>
      <y>0</y>
      <width>1103</width>
-     <height>23</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuProject">
@@ -1419,39 +1419,7 @@
     <addaction name="actionLoad_2"/>
     <addaction name="actionSave_2"/>
    </widget>
-   <widget class="QMenu" name="menuWindow">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="title">
-     <string>Window</string>
-    </property>
-    <addaction name="actionSet_size"/>
-   </widget>
-   <widget class="QMenu" name="menuSettings">
-    <property name="title">
-     <string>Settings</string>
-    </property>
-    <widget class="QMenu" name="menuFrequency_units">
-     <property name="title">
-      <string>Frequency units</string>
-     </property>
-     <addaction name="actionUse_Hz"/>
-     <addaction name="actionUse_rad_s"/>
-    </widget>
-    <widget class="QMenu" name="menuFilter_colors">
-     <property name="title">
-      <string>Filter colors</string>
-     </property>
-     <addaction name="actionColorsCanonical"/>
-     <addaction name="actionColorsRandom"/>
-    </widget>
-    <addaction name="menuFrequency_units"/>
-    <addaction name="menuFilter_colors"/>
-   </widget>
    <addaction name="menuProject"/>
-   <addaction name="menuSettings"/>
-   <addaction name="menuWindow"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionLoad">
@@ -1582,7 +1550,6 @@
   <tabstop>dl_savgol_wlen</tabstop>
   <tabstop>dl_savgol_ord</tabstop>
   <tabstop>dl_remove_btn</tabstop>
-  <tabstop>resp_btn</tabstop>
   <tabstop>plt_autoscale</tabstop>
  </tabstops>
  <resources/>
